--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
 	<title>Hello World</title>
 </head>
 <body>
-	<h1>Hello World!</h1>
+	<h1>My Favorite videos</h1>
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/Ct6BUPvE2sM" frameborder="0" allowfullscreen></iframe>
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/qnydFmqHuVo" frameborder="0" allowfullscreen></iframe>
+	<img src="http://vignette3.wikia.nocookie.net/hunterxhunter/images/b/b9/Killua-hunter-x-hunter-30545034-926-524.jpg/revision/latest?cb=20141113034326">
+	<p>
+		Hey! This is Ree. I am a senior from UW. 
+		Go HUskies!
+	</p>
 </body>
 </html>
