--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<h1>My Favorite videos</h1>
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/Ct6BUPvE2sM" frameborder="0" allowfullscreen></iframe>
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/qnydFmqHuVo" frameborder="0" allowfullscreen></iframe>
+	<h1>My Favorite picture</h1>
 	<img src="http://vignette3.wikia.nocookie.net/hunterxhunter/images/b/b9/Killua-hunter-x-hunter-30545034-926-524.jpg/revision/latest?cb=20141113034326">
 	<p>
 		Hey! This is Ree. I am a senior from UW. 
