--- a/someCss.html
+++ b/someCss.html
@@ -23,7 +23,7 @@
 
 </head>
 <body>
-	<p><img src="puppy.jpg" alt="yiansuoju.com" width="150" height="150">
+	<p><img src="/Users/hengruiyang/Desktop/puppy.jpg" alt="yiansuoju.com" width="150" height="150">
 
 	<p id="rcorners1">Go HUSKIES!</p>
 
