--- a/jobApplicationForm.html
+++ b/jobApplicationForm.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="forms.css">
-	<title>Job Application</title>
+	<title>Info 101 Tutor Application!</title>
 </head>
 <body>
 
