--- a/jobApplicationForm.html
+++ b/jobApplicationForm.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<h2>Job Application</h2>
+<h2>Info 101 Tutor Application!</h2>
 
 <form action="http://reeyang-1430529.github.io/formtest.php" method="post">
 
